# SingleCellStochastics

./: .gitignore  LICENSE  README.md  pyproject.toml
Lineage_simulation/: cellTree.py  cell_lineage.py  m1_mig1e-2_K1e3_f1_p0.3.nwk  m1_mig1e-2_K1e3_f1_p0.6.nwk  m1_mig1e-2_K1e3_f1_p1.0.nwk  regime.csv  sampled_cells.txt  tree.nwk
Stochastic_simulation/: m1_mig1e-2_k1e3_f1_p0.3_METregime.csv  readcounts.tsv  readcounts_BM.tsv
brain/: run_lavous_e15_rep1_fp_heritability_diff_calibration.slurm  run_lavous_e15_rep1_fp_vine_diff_calibration.slurm  run_lavous_e15_rep1_fp_vine_diff_calibration_pro_diff.slurm  run_lavous_e15_rep1_fp_vine_reconstruct_pro_da_glu.sh  run_vine_clone_trees.slurm  run_vine_e15_rep1_no_migration.slurm
data/: BM-results_chi-squared.tsv  OU-results_chi-squared.tsv
env/: EGX.yml  OUP.yml
examples/: result_chi-squared.tsv
expression_simulation/: plot_diff.py  plot_diff_params.py  plot_diff_roc.py  plot_diff_roc_scout.py  plot_plasticity.py  plot_plasticity_results.py  plot_selection.py
lineage_simulation/: cell_lineage.py  regime.csv  sampled_cells.txt  tree.nwk
lung_cancer/: run_lavous_calibrate.slurm  run_lavous_heritability_diff.slurm  run_reconstruct_highlighted_genes.slurm  run_vine_preprocess.slurm
singlecellstochastics/: BM.py  ROC.py  __init__.py  approx.py  birth_tree.py  brownian_motion.py  calibrate.py  clamp.py  dea.py  defaults.py  elbo.py  elbo_MC.py  em.py  importance.py  input_output.py  likelihood.py  lrt.py  optimization.py  optimize.py  ornstein_uhlenbeck.py  ou_diff.py  oup.py  output.py  plasticity.py  plasticity_bm.py  (+15 more)
(+1007 files in other folders)
